--- a/docker-compose-simple.yml
+++ b/docker-compose-simple.yml
@@ -41,8 +41,9 @@ services:
     container_name: prometheus0
     user: root
     volumes:
-      - thanos0:/data
+      # - thanos0:/data
       - ./data/prom0/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./data/storage:/data
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/data/prom0"
@@ -56,45 +57,45 @@ services:
     networks:
       - thanos
 
-  prometheus1:
-    image: prom/prometheus:v2.9.2
-    container_name: prometheus1
-    user: root
-    volumes:
-      - thanos1:/data
-      - ./data/prom1/prometheus.yml:/etc/prometheus/prometheus.yml
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/data/prom1"
-      - "--log.level=warn"
-      - "--web.enable-lifecycle"
-      - "--storage.tsdb.min-block-duration=2h"
-      - "--storage.tsdb.max-block-duration=2h"
-      - "--web.listen-address=0.0.0.0:9091"
-    depends_on:
-      - minio
-    networks:
-      - thanos
+  # prometheus1:
+  #   image: prom/prometheus:v2.9.2
+  #   container_name: prometheus1
+  #   user: root
+  #   volumes:
+  #     - thanos1:/data
+  #     - ./data/prom1/prometheus.yml:/etc/prometheus/prometheus.yml
+  #   command:
+  #     - "--config.file=/etc/prometheus/prometheus.yml"
+  #     - "--storage.tsdb.path=/data/prom1"
+  #     - "--log.level=warn"
+  #     - "--web.enable-lifecycle"
+  #     - "--storage.tsdb.min-block-duration=2h"
+  #     - "--storage.tsdb.max-block-duration=2h"
+  #     - "--web.listen-address=0.0.0.0:9091"
+  #   depends_on:
+  #     - minio
+  #   networks:
+  #     - thanos
 
-  prometheus2:
-    image: prom/prometheus:v2.9.2
-    container_name: prometheus2
-    user: root
-    volumes:
-      - thanos2:/data
-      - ./data/prom2/prometheus.yml:/etc/prometheus/prometheus.yml
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/data/prom2"
-      - "--log.level=warn"
-      - "--web.enable-lifecycle"
-      - "--storage.tsdb.min-block-duration=2h"
-      - "--storage.tsdb.max-block-duration=2h"
-      - "--web.listen-address=0.0.0.0:9092"
-    depends_on:
-      - minio
-    networks:
-      - thanos
+  # prometheus2:
+  #   image: prom/prometheus:v2.9.2
+  #   container_name: prometheus2
+  #   user: root
+  #   volumes:
+  #     - thanos2:/data
+  #     - ./data/prom2/prometheus.yml:/etc/prometheus/prometheus.yml
+  #   command:
+  #     - "--config.file=/etc/prometheus/prometheus.yml"
+  #     - "--storage.tsdb.path=/data/prom2"
+  #     - "--log.level=warn"
+  #     - "--web.enable-lifecycle"
+  #     - "--storage.tsdb.min-block-duration=2h"
+  #     - "--storage.tsdb.max-block-duration=2h"
+  #     - "--web.listen-address=0.0.0.0:9092"
+  #   depends_on:
+  #     - minio
+  #   networks:
+  #     - thanos
 
   sidecar0:
     image: thanosio/thanos:v0.12.2
@@ -111,8 +112,9 @@ services:
       - "--tsdb.path=/data/prom0"
       - "--objstore.config-file=/bucket.yml"
     volumes:
-      - thanos0:/data
+      # - thanos0:/data
       - ./data/bucket.yml:/bucket.yml
+      - ./data/storage:/data
     depends_on:
       - minio
       - prometheus0
@@ -122,51 +124,51 @@ services:
       - 10902 
       - 10900 
 
-  sidecar1:
-    image: thanosio/thanos:v0.12.2
-    container_name: thanos-sidecar1
-    command:
-      - "sidecar"
-      - "--debug.name=sidecar-1"
-      - "--log.level=debug"
-      - "--grpc-address=0.0.0.0:10911"
-      - "--grpc-grace-period=1s"
-      - "--http-address=0.0.0.0:10912"
-      - "--http-grace-period=1s"
-      - "--prometheus.url=http://prometheus1:9091"
-      - "--tsdb.path=/data/prom1"
-      - "--objstore.config-file=/bucket.yml"
-    volumes:
-      - thanos1:/data
-      - ./data/bucket.yml:/bucket.yml
-    depends_on:
-      - minio
-      - prometheus1
-    networks:
-      - thanos
+  # sidecar1:
+  #   image: thanosio/thanos:v0.12.2
+  #   container_name: thanos-sidecar1
+  #   command:
+  #     - "sidecar"
+  #     - "--debug.name=sidecar-1"
+  #     - "--log.level=debug"
+  #     - "--grpc-address=0.0.0.0:10911"
+  #     - "--grpc-grace-period=1s"
+  #     - "--http-address=0.0.0.0:10912"
+  #     - "--http-grace-period=1s"
+  #     - "--prometheus.url=http://prometheus1:9091"
+  #     - "--tsdb.path=/data/prom1"
+  #     - "--objstore.config-file=/bucket.yml"
+  #   volumes:
+  #     - thanos1:/data
+  #     - ./data/bucket.yml:/bucket.yml
+  #   depends_on:
+  #     - minio
+  #     - prometheus1
+  #   networks:
+  #     - thanos
 
-  sidecar2:
-    image: thanosio/thanos:v0.12.2
-    container_name: thanos-sidecar2
-    command:
-      - "sidecar"
-      - "--debug.name=sidecar-2"
-      - "--log.level=debug"
-      - "--grpc-address=0.0.0.0:10921"
-      - "--grpc-grace-period=1s"
-      - "--http-address=0.0.0.0:10922"
-      - "--http-grace-period=1s"
-      - "--prometheus.url=http://prometheus2:9092"
-      - "--tsdb.path=/data/prom2"
-      - "--objstore.config-file=/bucket.yml"
-    volumes:
-      - thanos2:/data
-      - ./data/bucket.yml:/bucket.yml
-    depends_on:
-      - minio
-      - prometheus2
-    networks:
-      - thanos
+  # sidecar2:
+  #   image: thanosio/thanos:v0.12.2
+  #   container_name: thanos-sidecar2
+  #   command:
+  #     - "sidecar"
+  #     - "--debug.name=sidecar-2"
+  #     - "--log.level=debug"
+  #     - "--grpc-address=0.0.0.0:10921"
+  #     - "--grpc-grace-period=1s"
+  #     - "--http-address=0.0.0.0:10922"
+  #     - "--http-grace-period=1s"
+  #     - "--prometheus.url=http://prometheus2:9092"
+  #     - "--tsdb.path=/data/prom2"
+  #     - "--objstore.config-file=/bucket.yml"
+  #   volumes:
+  #     - thanos2:/data
+  #     - ./data/bucket.yml:/bucket.yml
+  #   depends_on:
+  #     - minio
+  #     - prometheus2
+  #   networks:
+  #     - thanos
 
   store:
     image: thanosio/thanos:v0.12.2
@@ -183,8 +185,9 @@ services:
       - "--data-dir=/data/store"
       - "--objstore.config-file=/bucket.yml"
     volumes:
-      - store:/data
+      # - store:/data
       - ./data/bucket.yml:/bucket.yml
+      - ./data/storage:/data
     depends_on:
       - minio
     networks:
@@ -205,10 +208,11 @@ services:
       - "--label=receive=\"true\""
       - "--objstore.config-file=/bucket.yml"
       - "--remote-write.address=0.0.0.0:10908"
-      - "--tsdb.retention=2d" 
+      - "--tsdb.retention=2d"
     volumes:
-      - receive:/data
+      # - receive:/data
       - ./data/bucket.yml:/bucket.yml
+      - ./data/storage:/data
     depends_on:
       - minio
     networks:
@@ -258,8 +262,8 @@ services:
       - "--http-grace-period=1s"
       - "--query.replica-label=prometheus"
       - "--store=sidecar0:10901"
-      - "--store=sidecar1:10911"
-      - "--store=sidecar2:10921"
+      # - "--store=sidecar1:10911"
+      # - "--store=sidecar2:10921"
       - "--store=store:10905"
       - "--store=receive:10907"
       - "--query.auto-downsampling"
@@ -268,39 +272,39 @@ services:
     depends_on:
       - minio
       - sidecar0
-      - sidecar1
-      - sidecar2
+      # - sidecar1
+      # - sidecar2
       - store
       - receive
     networks:
       - thanos
 
-  query1:
-    image: thanosio/thanos:v0.12.2
-    container_name: thanos-query1
-    command:
-      - "query"
-      - "--debug.name=query1"
-      - "--log.level=debug"
-      - "--grpc-address=0.0.0.0:10913"
-      - "--grpc-grace-period=1s"
-      - "--http-address=0.0.0.0:10914"
-      - "--http-grace-period=1s"
-      - "--query.replica-label=prometheus"
-      - "--store=sidecar0:10901"
-      - "--store=sidecar1:10911"
-      - "--store=sidecar2:10921"
-      - "--store=store:10905"
-      - "--store=receive:10907"
-    depends_on:
-      - minio
-      - sidecar0
-      - sidecar1
-      - sidecar2
-      - store
-      - receive
-    networks:
-      - thanos
+  # query1:
+  #   image: thanosio/thanos:v0.12.2
+  #   container_name: thanos-query1
+  #   command:
+  #     - "query"
+  #     - "--debug.name=query1"
+  #     - "--log.level=debug"
+  #     - "--grpc-address=0.0.0.0:10913"
+  #     - "--grpc-grace-period=1s"
+  #     - "--http-address=0.0.0.0:10914"
+  #     - "--http-grace-period=1s"
+  #     - "--query.replica-label=prometheus"
+  #     - "--store=sidecar0:10901"
+  #     - "--store=sidecar1:10911"
+  #     - "--store=sidecar2:10921"
+  #     - "--store=store:10905"
+  #     - "--store=receive:10907"
+  #   depends_on:
+  #     - minio
+  #     - sidecar0
+  #     - sidecar1
+  #     - sidecar2
+  #     - store
+  #     - receive
+  #   networks:
+  #     - thanos
       
   compactor:
     image: thanosio/thanos:v0.12.2
@@ -322,14 +326,14 @@ services:
       - "--wait"
       - "--wait-interval=3m"
     volumes:
-      - compact:/tmp
+      # - compact:/tmp
       - ./data/bucket.yml:/bucket.yml
-      # - ./data/compactor:/data
+      - ./data/compactor:/data
     depends_on:
       - minio
       - sidecar0
-      - sidecar1
-      - sidecar2
+      # - sidecar1
+      # - sidecar2
       - store
     expose:
       - 10902
@@ -390,8 +394,8 @@ networks:
 volumes:
   minio: {}
   thanos0: {}
-  thanos1: {}
-  thanos2: {}
+  # thanos1: {}
+  # thanos2: {}
   store: {}
   receive: {}
   compact: {}
