--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 LOGGER_LOCATION: logs/daily.txt
 BASE_QUERY_URL: http://localhost:10904/api/v1/query?query= 
-FREQUENCY_IN_SECONDS: 5 
+TIME_PERIOD_IN_SECONDS: 10
