--- a/docker-compose-single-server.yml
+++ b/docker-compose-single-server.yml
@@ -57,46 +57,6 @@ services:
     networks:
       - thanos
 
-  # prometheus1:
-  #   image: prom/prometheus:v2.9.2
-  #   container_name: prometheus1
-  #   user: root
-  #   volumes:
-  #     - thanos1:/data
-  #     - ./data/prom1/prometheus.yml:/etc/prometheus/prometheus.yml
-  #   command:
-  #     - "--config.file=/etc/prometheus/prometheus.yml"
-  #     - "--storage.tsdb.path=/data/prom1"
-  #     - "--log.level=warn"
-  #     - "--web.enable-lifecycle"
-  #     - "--storage.tsdb.min-block-duration=2h"
-  #     - "--storage.tsdb.max-block-duration=2h"
-  #     - "--web.listen-address=0.0.0.0:9091"
-  #   depends_on:
-  #     - minio
-  #   networks:
-  #     - thanos
-
-  # prometheus2:
-  #   image: prom/prometheus:v2.9.2
-  #   container_name: prometheus2
-  #   user: root
-  #   volumes:
-  #     - thanos2:/data
-  #     - ./data/prom2/prometheus.yml:/etc/prometheus/prometheus.yml
-  #   command:
-  #     - "--config.file=/etc/prometheus/prometheus.yml"
-  #     - "--storage.tsdb.path=/data/prom2"
-  #     - "--log.level=warn"
-  #     - "--web.enable-lifecycle"
-  #     - "--storage.tsdb.min-block-duration=2h"
-  #     - "--storage.tsdb.max-block-duration=2h"
-  #     - "--web.listen-address=0.0.0.0:9092"
-  #   depends_on:
-  #     - minio
-  #   networks:
-  #     - thanos
-
   sidecar0:
     image: thanosio/thanos:v0.12.2
     container_name: thanos-sidecar0
@@ -124,52 +84,6 @@ services:
       - 10902 
       - 10900 
 
-  # sidecar1:
-  #   image: thanosio/thanos:v0.12.2
-  #   container_name: thanos-sidecar1
-  #   command:
-  #     - "sidecar"
-  #     - "--debug.name=sidecar-1"
-  #     - "--log.level=debug"
-  #     - "--grpc-address=0.0.0.0:10911"
-  #     - "--grpc-grace-period=1s"
-  #     - "--http-address=0.0.0.0:10912"
-  #     - "--http-grace-period=1s"
-  #     - "--prometheus.url=http://prometheus1:9091"
-  #     - "--tsdb.path=/data/prom1"
-  #     - "--objstore.config-file=/bucket.yml"
-  #   volumes:
-  #     - thanos1:/data
-  #     - ./data/bucket.yml:/bucket.yml
-  #   depends_on:
-  #     - minio
-  #     - prometheus1
-  #   networks:
-  #     - thanos
-
-  # sidecar2:
-  #   image: thanosio/thanos:v0.12.2
-  #   container_name: thanos-sidecar2
-  #   command:
-  #     - "sidecar"
-  #     - "--debug.name=sidecar-2"
-  #     - "--log.level=debug"
-  #     - "--grpc-address=0.0.0.0:10921"
-  #     - "--grpc-grace-period=1s"
-  #     - "--http-address=0.0.0.0:10922"
-  #     - "--http-grace-period=1s"
-  #     - "--prometheus.url=http://prometheus2:9092"
-  #     - "--tsdb.path=/data/prom2"
-  #     - "--objstore.config-file=/bucket.yml"
-  #   volumes:
-  #     - thanos2:/data
-  #     - ./data/bucket.yml:/bucket.yml
-  #   depends_on:
-  #     - minio
-  #     - prometheus2
-  #   networks:
-  #     - thanos
-
   store:
     image: thanosio/thanos:v0.12.2
     container_name: thanos-store
@@ -185,7 +99,6 @@ services:
       - "--data-dir=/data/store"
       - "--objstore.config-file=/bucket.yml"
     volumes:
-      # - store:/data
       - ./data/bucket.yml:/bucket.yml
       - ./data/storage:/data
     depends_on:
@@ -208,9 +121,8 @@ services:
       - "--label=receive=\"true\""
       - "--objstore.config-file=/bucket.yml"
       - "--remote-write.address=0.0.0.0:10908"
-      - "--tsdb.retention=2d"
+      # - "--tsdb.retention=2d"
     volumes:
-      # - receive:/data
       - ./data/bucket.yml:/bucket.yml
       - ./data/storage:/data
     depends_on:
@@ -234,21 +146,6 @@ services:
     networks:
       - thanos
 
-  node-exporter:
-    image: prom/node-exporter:v1.0.1
-    container_name: node-exporter
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-    networks:
-      - thanos
-
   query0:
     image: thanosio/thanos:v0.12.2
     container_name: thanos-query0
@@ -262,8 +159,6 @@ services:
       - "--http-grace-period=1s"
       - "--query.replica-label=prometheus"
       - "--store=sidecar0:10901"
-      # - "--store=sidecar1:10911"
-      # - "--store=sidecar2:10921"
       - "--store=store:10905"
       - "--store=receive:10907"
       - "--query.auto-downsampling"
@@ -272,39 +167,10 @@ services:
     depends_on:
       - minio
       - sidecar0
-      # - sidecar1
-      # - sidecar2
       - store
       - receive
     networks:
       - thanos
-
-  # query1:
-  #   image: thanosio/thanos:v0.12.2
-  #   container_name: thanos-query1
-  #   command:
-  #     - "query"
-  #     - "--debug.name=query1"
-  #     - "--log.level=debug"
-  #     - "--grpc-address=0.0.0.0:10913"
-  #     - "--grpc-grace-period=1s"
-  #     - "--http-address=0.0.0.0:10914"
-  #     - "--http-grace-period=1s"
-  #     - "--query.replica-label=prometheus"
-  #     - "--store=sidecar0:10901"
-  #     - "--store=sidecar1:10911"
-  #     - "--store=sidecar2:10921"
-  #     - "--store=store:10905"
-  #     - "--store=receive:10907"
-  #   depends_on:
-  #     - minio
-  #     - sidecar0
-  #     - sidecar1
-  #     - sidecar2
-  #     - store
-  #     - receive
-  #   networks:
-  #     - thanos
       
   compactor:
     image: thanosio/thanos:v0.12.2
@@ -317,7 +183,7 @@ services:
       - "--http-address=0.0.0.0:10900"
       - "--http-grace-period=2m"
       - "--consistency-delay=30m"
-      - "--retention.resolution-raw=4h"
+      - "--retention.resolution-raw=2h"
       - "--retention.resolution-5m=40h"
       - "--retention.resolution-1h=10d"
       - "--block-sync-concurrency=20"
@@ -326,14 +192,11 @@ services:
       - "--wait"
       - "--wait-interval=3m"
     volumes:
-      # - compact:/tmp
       - ./data/bucket.yml:/bucket.yml
-      - ./data/compactor:/data
+      - ./data/compactor:/tmp
     depends_on:
       - minio
       - sidecar0
-      # - sidecar1
-      # - sidecar2
       - store
     expose:
       - 10902
@@ -371,6 +234,23 @@ services:
   #     - minio  
   #   networks:
   #     - thanos  
+
+  node-exporter:
+    image: prom/node-exporter:v1.0.1
+    container_name: node-exporter
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+    networks:
+      - thanos
+    ports:
+      - 9100:9100
       
   grafana:
     image: grafana/grafana:7.0.3
@@ -394,8 +274,6 @@ networks:
 volumes:
   minio: {}
   thanos0: {}
-  # thanos1: {}
-  # thanos2: {}
   store: {}
   receive: {}
   compact: {}
