--- a/docker-compose-multiserver.yml
+++ b/docker-compose-multiserver.yml
@@ -372,7 +372,7 @@ services:
     image: grafana/grafana:7.0.3
     container_name: grafana
     volumes:
-     - grafana_data:/var/lib/grafana
+     - ./grafana_data:/var/lib/grafana
      - ./grafana/provisioning:/etc/grafana/provisioning
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
